# Kodak-DCS-Tools

./: .gitignore  README.md  hardware.md  profiles.md  tools.md
Firmwares/: README.md
Firmwares/ProBack/3.2.11/: patch.txt
Firmwares/ProBack645/3.3.10MH/: changes.txt
Firmwares/ProBack645/3.3.8/: 3.3.8.txt  3.3.8_1.asm  Props.asm
Firmwares/ProBack645/3.3.9/: Contax.asm  PB645.sym
Firmwares/ProBack645/3.3.9MH/: 3.3.9.txt  PB645.sym  _code
Firmwares/ProBack645/3.4.0CH/: PB645.sym  _code  lens.txt  patch_c.txt  update_c.txt
Firmwares/ProBack645/3.4.0MH/: Mamiya_patched.c  PB645.idc  PB645.sym  cMsgMam.asm  cMsgMamSet.asm  cTaskMam.asm  data.txt  patch.txt  symedit  testProps.txt
Firmwares/ProBack645/3.4.1MH/: Mamiya_patched.c  PB645.sym  patch.txt  update.txt
Firmwares/ProBack645/3.4.2MH/: Mamiya_patched.c  PB645.idc  cameraMessageMamiya.asm  cameraMessageSetupMamiya.asm  cameraTaskMamiya.asm  patch.txt  update.txt
Firmwares/ProBack645/3.4.3M/: LensSettings.c  PB645.idc  cameraMessageMamiya.asm  cameraMessageSetupMamiya.asm  cameraTaskMamiya.asm  icons.pcx  lens.txt  patch.txt  update.txt
Firmwares/ProBack645/3.4.4M/: Mamiya_patched.c
Firmwares/ProBack645/3.4.4M_Alt/: Mamiya_patched.c  README.md  cameraMessageSetupMamiya.txt  cameraTaskMamiya.txt  patch.txt  reqISR.txt  spiISR.txt  update.txt
Firmwares/ProBack645/3.4.5M/: Mamiya_patched.c  PB645.sym  imageTakePictureError.txt  patch.txt  shutterOpenCommon.asm
Firmwares/ProBack645/3.4.5M_Alt/: Mamiya_patched.c  PB645.sym  README.md  cameraTaskMamiya.asm  patch.txt  shutterOpenCommon.asm
Firmwares/Reversed_Sources/DSP/dcs7xx/: ah2.c  c6211.c  c6211.h  capture.c  compress.c  crc.c  crop.c  darkmap.c  dcs7xx.h  debug.c  defect.c  display.c  dma.c  downsmpl.c  dsptest.c  endian.h  histogram.c  hp.c  imager.c  imagesize.c  jpegdecode.c  jpegencode.c  memory.c  pattern.c  preview.c  process.c  quicklossless.c  quicklossless.h  resize.c  rgbtoycc.c  save.c  sba.c  sharpen.c  sigma.c  sound.c  source.c  symbol.c  thmbnail.c
Firmwares/Reversed_Sources/DSP/dcs8xx/: accum.c  ah2.c  atasd.c  bilinear.c  black.c  c14.c  c14accum.c  c6414.c  c6414.h  cfa.c  color.c  compress.c  crc.c  dcrdecode.c  dcrycc.c  dcs8xx.h  debug8.c  defect.c  dma8.c  downsample.c  dsptest8.c  endian.h  histogram.c  hp8.c  imager.c  imgbuf.c  ipcontrol.c  jpegdecode.c  jpegencode.c  mariah.c  mcu.c  memory8.c  nemo.c  nemocalc.c  pattern.c  process.c  quicklossless.c  quicklossless.h  (+11 more)
Firmwares/Reversed_Sources/Mamiya/: Mamiya.c
Firmwares/SLRs/: coff  curves.csv  dcs8xx.cof  pro14.ipf  update.txt
Hardware/ProBack_LED_backlight/: 2xLED_Panel.brd  2xLED_Panel.sch  3xLED_Panel.brd  3xLED_Panel.sch  6xLED_Panel.brd  6xLED_Panel.sch  BOM.csv  LED_Driver_Separate.brd  LED_Driver_Separate.sch  LED_Panel_And_Driver.brd  LED_Panel_And_Driver.sch  README.md
Mamiya_Protocol/: README.md
Mamiya_Protocol/data/: MultipleREQ.json  ReplyReqSeq.json  ReplySeq.json  ShutterSeq.json  Single_msg.json  shutter.logicdata
sources/: README.md
sources/Bin_wcx/: CMakeLists.txt  kodakbinfw.cpp  kodakbinfw.def  kodakbinfw.rc  kodakbinfw.sln  kodakbinfw.vcxproj  kodakbinfw.vcxproj.filters  pluginst.inf  resource.h
sources/Bin_wcx/kodakbinfw32/: kodakbinfw.wcx  pluginst.inf
sources/Bin_wcx/kodakbinfw64/: kodakbinfw.wcx64  pluginst.inf
sources/DCSRemap/: CMakeLists.txt  README.md
sources/DCSRemap/cmake/modules/: FindLibRaw.cmake
sources/DCSRemap/common/: CMakeLists.txt  about.cpp  about.h  about.ui  dcs_remap.cpp  dcs_remap.h  dcs_remap.qrc  dcs_remap.ui  dcs_remap_ru.qm  dcs_remap_ru.ts  defects.cpp  defects.h  ifdata.cpp  ifdata.h  raw_image.cpp  raw_image.h
sources/DCSRemap/common/help/: help_en.html  help_en.txt  help_ru.html  help_ru.txt
sources/DCSRemap/mac/: CMakeLists.txt  DCSRemap.icns  Info.plist
sources/DCSRemap/mac/DCSRemap.xcodeproj/: project.pbxproj
sources/DCSRemap/mac/DCSRemap.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
sources/DCSRemap/mac/DCSRemap.xcodeproj/project.xcworkspace/xcuserdata/dalex.xcuserdatad/: UserInterfaceState.xcuserstate
sources/DCSRemap/mac/DCSRemap.xcodeproj/xcuserdata/dalex.xcuserdatad/xcschemes/: DCSRemap Static QT 5.2.1.xcscheme  xcschememanagement.plist
sources/DCSRemap/win/: CMakeLists.txt  DCSRemap.props  DCSRemap.rc  DCSRemap.sln  DCSRemap.vcxproj  DCSRemap.vcxproj.filters
sources/IDA/: CMakeLists.txt  IdaSDK.props  README.md  plugins.cfg
sources/IDA/BIN_loader/: binloader.cpp  binloader.sln  binloader.vcxproj  binloader.vcxproj.filters  immr.h  readme.md
sources/IDA/DSP/coff/: dsp_coff.h  dump_coff.cpp  dump_coff.sln  dump_coff.vcxproj  dump_coff.vcxproj.filters
sources/IDA/DSP/loader/: dsploader.cpp  dsploader.sln  dsploader.vcxproj  dsploader.vcxproj.filters  loaded sections.txt
sources/IDA/DSP/offset_finder/: offset_finder.cpp  offset_finder.sln  offset_finder.vcxproj  offset_finder.vcxproj.filters  plugins.cfg
sources/IDA/DSP/processor/: Readme.md  ana.cpp  emu.cpp  ins.cpp  ins.hpp  out.cpp  reg.cpp  tms320c6.diff  tms320c6b.diff  tms320c6b.sln  tms320c6b.vcxproj  tms320c6b.vcxproj.filters  tms6.hpp
sources/IDA/PPC/: ppc2c.cpp  ppc2c.vcxproj  ppc2c.vcxproj.filters  ppc_plugins.sln  ppchelper.cpp  ppchelper.vcxproj  ppchelper.vcxproj.filters  readme_ppc2c.txt  readme_ppchelper.txt
sources/IDA/cmake/: FindIDA.cmake
sources/common/: dcs_common.cpp  dcs_common.h  dcs_firm.cpp  dcs_firm.h  dcs_tiff_tags.cpp  dcs_tiff_tags.h
sources/dcrdcpwb/: dcrdcpwb.cpp  dcrdcpwb.sln  dcrdcpwb.vcxproj  dcrdcpwb.vcxproj.filters
sources/dcrprofile/: GenerateXMPToolkitSDK_win.bat  dcrprofile.cpp  dcrprofile.sln  dcrprofile.vcxproj  dcrprofile.vcxproj.filters
sources/dcrutils/: DCR.fmt  dcrutils.cpp  dcrutils.h  dcrutils.sln  dcrutils.vcxproj  dcrutils.vcxproj.filters
sources/dng_sdk/: readme.md
sources/dng_sdk/source/: dng_color_spec.cpp  dng_color_spec.h
sources/icc2dcp/: icc2dcp.cpp  icc2dcp.props  icc2dcp.sln  icc2dcp.vcxproj  icc2dcp.vcxproj.filters
sources/ifutils/: Readme.md  ifutils.cpp  ifutils.h  ifutils.sln  ifutils.vcxproj  ifutils.vcxproj.filters  update.txt
